<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prawesome</string>
    <string name="add_activity">Add a new activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="create_activity">Add an activity</string>
    <string name="title_activity_first_fragment">FirstFragment</string>
    <string name="title_activity_second_fragment">SecondFragment</string>
    <string name="title_activity_third_fragment">ThirdFragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="about">About</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_data_base_debug">DataBaseDebugActivity</string>
    <string name="db_string">DataBaseDebug</string>
    <string name="local_db_string">LocalDataBaseDebug</string>
    <string name="not_now">Not now</string>
    <string name="never_again">Never again</string>
    <string name="title_activity_local_data_base_debug_activity">LocalDataBaseDebugActivity</string>
    <string name="no_activities_to_show">No activities to show</string>
    <string name="no_connection">No connection to internet</string>
    <string name="open_internet_settings">Open internet settings</string>
    <string name="open_internet_wifi_settings">Open WiFi settings</string>
    <string name="open_internet_mobile_networks_settings">Open moblie netwoks settings</string>
    <string name="restart">Reload</string>
    <string name="remove_not_now">Show not now activities</string>
    <string name="title_activity_sign_in_test">Prawesome</string>
    <string name="logout">Sign out</string>

</resources>
