<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.prawesome.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    <item
        android:id="@+id/add_activity"
        android:orderInCategory="90"
        android:title="@string/add_activity"
       	android:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="110"
        android:title="@string/about"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_ldb"
        android:orderInCategory="110"
        android:title="@string/local_db_string"
        android:showAsAction="never"/>
        <item
        android:id="@+id/action_logout"
        android:orderInCategory="110"
        android:title="@string/logout"
        android:showAsAction="never"/>
</menu>
